@@ -77,3 +77,4 @@
   23-Aug-2024  - V0.81 Add context manager for forming mongo connections in TargetCofactorDbProvider
   26-Aug-2024  - V0.82 Revert back to persistent client connections;
                        Update CARDTargetOntologyProvider resource loading behavior
+   9-Dec-2024  - V0.83 Update Azure pipelines to use latest macOS, Ubuntu, and python 3.10
